--- a/nft-timelines/earliest-hashed-nfts-on-bitcoin/index.html
+++ b/nft-timelines/earliest-hashed-nfts-on-bitcoin/index.html
@@ -16,7 +16,7 @@
     <link href="https://cdn.datatables.net/2.1.8/css/dataTables.bootstrap5.css" rel="stylesheet" />
 </head>
 
-<body style="margin: 2rem; padding: 1rem;">
+<body class="p-1 m-4">
     <div class="pb-3">
         <h1>Earliest Hashed NFTs On Bitcoin (2014-2018)</h1>
         <h6>
@@ -27,11 +27,14 @@
 
     <div class="pb-3">
         <h6>
-            ✅ = pristine, ⚠️ = check notes.
+            ✅ = pristine
+        </h6>
+        <h6>
+            ⚠️ = check notes
         </h6>
     </div>
 
-    <table id="data-table" class="display" style="width:100%">
+    <table id="data-table" class="table display" style="width:100%">
         <thead class="text-center">
             <tr>
                 <th>File</th>
