--- a/nft-timelines/earliest-hashed-nfts-on-bitcoin/index.html
+++ b/nft-timelines/earliest-hashed-nfts-on-bitcoin/index.html
@@ -14,6 +14,12 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css"
         rel="stylesheet" />
     <link href="https://cdn.datatables.net/2.1.8/css/dataTables.bootstrap5.css" rel="stylesheet" />
+
+    <style>
+        a {
+            text-decoration: none;
+        }
+    </style>
 </head>
 
 <body class="p-1 m-4">
