--- a/nft-timelines/0xmons-fully-onchain-in-2021/index.html
+++ b/nft-timelines/0xmons-fully-onchain-in-2021/index.html
@@ -40,7 +40,10 @@
         <h6>
             <b>Note</b>: The first AI artwork to include both AI art AND the algo/neural network on chain is 
             <a href="https://web.archive.org/web/20230327021332/https://opensea.io/assets/ethereum/0x2a648cb23d3adf1bb171fabc0119ea3eb951841f/0">XOR by Nahiko</a>, 
-            which was releaased in 9th August 2021. 0xmons with onchain animations released before this date could therefore be of extra interest.
+            which was releaased in 9th August 2021.
+        </h6>
+        <h6>
+            With that in mind, 0xmons with onchain animations released before this date could therefore be of extra interest.
         </h6>
     </div>
 
@@ -51,6 +54,7 @@
                 <th>Onchain Datetime</th>
                 <th>Linked Datetime</th>
                 <th>Asset Name</th>
+                <th>Series</th>
                 <th>Description</th>
             </tr>
         </thead>
@@ -88,6 +92,7 @@
                                 <td>${row.onchain_datetime}</td>
                                 <td>${row.linked_datetime}</td>
                                 <td>${row.name}</td>
+                                <td>${row.series}</td>
                                 <td>${row.description}</td>
                             </tr>
                         `;
