--- a/nft-timelines/0xmons-fully-onchain-in-2021/index.html
+++ b/nft-timelines/0xmons-fully-onchain-in-2021/index.html
@@ -55,6 +55,7 @@
                 <th>Linked Datetime</th>
                 <th>Asset Name</th>
                 <th>Series</th>
+                <th>Put Onchain By</th>
                 <th>Description</th>
             </tr>
         </thead>
@@ -93,6 +94,7 @@
                                 <td>${row.linked_datetime}</td>
                                 <td>${row.name}</td>
                                 <td>${row.series}</td>
+                                <td>${row.onchain_by}</td>
                                 <td>${row.description}</td>
                             </tr>
                         `;
