--- a/nft-timelines/0xmons-fully-onchain-in-2021/index.html
+++ b/nft-timelines/0xmons-fully-onchain-in-2021/index.html
@@ -45,18 +45,22 @@
         <h6>
             With that in mind, 0xmons with onchain animations released before this date could therefore be of extra interest.
         </h6>
+        <h6>
+            ⛓️ = this column is onchain data
+        </h6>
     </div>
 
     <table id="data-table" class="table display" style="width:100%">
         <thead class="text-center">
             <tr>
-                <th>Art</th>
+                <th>Art ⛓️</th>
                 <th>Onchain Datetime</th>
                 <th>Linked Datetime</th>
-                <th>Asset Name</th>
+                <th>Name ⛓️</th>
                 <th>Series</th>
-                <th>Put Onchain By</th>
-                <th>Description</th>
+                <th>Author ⛓️</th>
+                <th>Epithets ⛓️</th>
+                <th>Description ⛓️</th>
             </tr>
         </thead>
 
@@ -94,7 +98,8 @@
                                 <td>${row.linked_datetime}</td>
                                 <td>${row.name}</td>
                                 <td>${row.series}</td>
-                                <td>${row.onchain_by}</td>
+                                <td>${row.author}</td>
+                                <td>${row.epithets}</td>
                                 <td>${row.description}</td>
                             </tr>
                         `;
