--- a/nft-timelines/0xmons-fully-onchain-in-2021/index.html
+++ b/nft-timelines/0xmons-fully-onchain-in-2021/index.html
@@ -45,6 +45,9 @@
         <h6>
             With that in mind, 0xmons with onchain animations released before this date could therefore be of extra interest.
         </h6>
+    </div>
+
+    <div class="pb-3">
         <h6>
             ⛓️ = this column is onchain data
         </h6>
