--- a/nft-timelines/0xmons-fully-onchain-in-2021/index.html
+++ b/nft-timelines/0xmons-fully-onchain-in-2021/index.html
@@ -29,7 +29,7 @@
             Only 87 0xmons had their GAN animations put onchain in 2021, making them the first known onchain AI artworks.
         </h6>
         <h6>
-            While some other 0xmons had still-images of their artwork put onchain, this list focuses purely on those that had their full animations put onchain back then.
+            While some other 0xmons had still images of their artwork put onchain, this list focuses only on those that had their full artwork (animation) put onchain.
         </h6>
         <h6>
             See <a href='https://web.archive.org/web/20240909141756/https://blog.0xmons.xyz/79081566310' target='_blank'>0xmons v2 Cthulhu: On-chain Encoding</a> for more info.
